--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "request": "2.78.0",
     "request-promise": "4.1.1",
     "mongoose": "4.6.5",
-    "bluebird": "3.4.6"
+    "bluebird": "3.4.6",
+    "socket.io": "^1.5.1"
   },
   "devDependencies": {
     "chai": "^3.4.1",
